fix(docs-infra): fix resources page tabs text which is not visible on small screens (#35935)
on small mobile screens the top tab bar contains text which was not visible on small screens changed text size, margin and padding so that the text could be contained in these screens (320px to 480px)

PR Close #35935

--- a/aio/src/styles/2-modules/_resources.scss
+++ b/aio/src/styles/2-modules/_resources.scss
@@ -11,6 +11,18 @@
 
 .resources-container {
   position: relative;
+  .group-buttons{
+    @media (max-width: 480px) {
+      .button, a.button.mat-button{
+        font-size:1.2rem;
+        padding:0;
+      }
+
+      a.filter-button{
+        margin: 0;
+      }
+    }
+  }
 }
 
 .grid-fixed:after, .grid-fixed:before {
